# orbit-formats

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
canonical-representation/: index.html
cli/: index.html
conversion-matrix/: index.html
docs/: api.md  canonical-representation.md  cli.md  conversion-matrix.md  formats.md  getting-started.md  index.md  lossy-conversions.md  validation.md
formats/: index.html
getting-started/: index.html
lossy-conversions/: index.html
schemas/ccsds-ndm/: README.md  ndmxml-4.0.0-acm-2.0.xsd  ndmxml-4.0.0-aem-2.0.xsd  ndmxml-4.0.0-apm-2.0.xsd  ndmxml-4.0.0-cdm-1.0.xsd  ndmxml-4.0.0-common-4.0.xsd  ndmxml-4.0.0-master-4.0.xsd  ndmxml-4.0.0-namespace-4.0.xsd  ndmxml-4.0.0-ndm-4.0.xsd  ndmxml-4.0.0-ocm-3.0.xsd  ndmxml-4.0.0-oem-3.0.xsd  ndmxml-4.0.0-omm-3.0.xsd  ndmxml-4.0.0-opm-3.0.xsd  ndmxml-4.0.0-rdm-1.0.xsd  ndmxml-4.0.0-tdm-2.0.xsd
scripts/: make_spk_golden.py  regen_ccsds_xsd.py
search/: search_index.json
src/orbit_formats/: __init__.py  _spice.py  _tle_lines.py  api.py  cli.py  detect.py  errors.py  formats.py  registry.py  source.py  units.py  warnings.py
src/orbit_formats/_ccsds_xsd/: __init__.py
src/orbit_formats/adapters/: __init__.py  aem_xml.py  apm_xml.py  base.py  ccsds_xml.py  cdm_xml.py  ndm_xml.py  ocm_xml.py  oem_xml.py  omm_xml.py  opm_xml.py  tdm_xml.py
src/orbit_formats/canonical/: __init__.py  attitude.py  base.py  combined.py  conjunction.py  elements.py  ephemeris.py  fidelity.py  maneuver.py  metadata.py  state.py  tracking.py
src/orbit_formats/convert/: __init__.py  capabilities.py  elements.py  frames.py  geodetic.py  graph.py  time.py
src/orbit_formats/readers/: __init__.py  ccsds.py  ccsds_aem.py  ccsds_apm.py  ccsds_cdm.py  ccsds_ndm.py  ccsds_ocm.py  ccsds_omm.py  ccsds_opm.py  ccsds_tdm.py  gmat_report.py  omm_tabular.py  rinex_nav.py  sp3.py  spk.py  stk_attitude.py  stk_ephemeris.py  tle.py
src/orbit_formats/writers/: __init__.py  aem.py  apm.py  cdm.py  ndm.py  ocm.py  oem.py  omm.py  omm_tabular.py  opm.py  sp3.py  spk.py  stk_attitude.py  stk_ephemeris.py  tdm.py  tle.py
tests/: conftest.py  test_api.py  test_attitude.py  test_ccsds_aem.py  test_ccsds_aem_oracle.py  test_ccsds_aem_xml.py  test_ccsds_apm.py  test_ccsds_apm_oracle.py  test_ccsds_apm_xml.py  test_ccsds_cdm.py  test_ccsds_cdm_oracle.py  test_ccsds_cdm_xml.py  test_ccsds_ndm.py  test_ccsds_ndm_oracle.py  test_ccsds_ndm_xml.py  test_ccsds_ocm.py  test_ccsds_ocm_oracle.py  test_ccsds_ocm_xml.py  test_ccsds_oem.py  test_ccsds_oem_oracle.py  test_ccsds_oem_xml.py  test_ccsds_omm.py  test_ccsds_omm_oracle.py  test_ccsds_omm_xml.py  test_ccsds_opm.py  test_ccsds_opm_oracle.py  test_ccsds_opm_xml.py  test_ccsds_tdm.py  test_ccsds_tdm_oracle.py  test_ccsds_tdm_xml.py  test_ccsds_xml_binding.py  test_cli.py  test_conjunction.py  test_conversion_matrix.py  test_convert_elements.py  test_convert_frames.py  test_convert_geodetic.py  test_convert_graph.py  test_convert_oracle.py  test_convert_time.py  (+27 more)
tests/data/aem/: golden_aem.aem  golden_aem.xml
tests/data/apm/: golden_apm.apm  golden_apm.xml
tests/data/cdm/: golden_cdm.cdm  golden_cdm.xml
tests/data/ndm/: golden_ndm.ndm  golden_ndm.xml  unsupported_member.xml
tests/data/ocm/: golden_ocm.ocm  golden_ocm.xml
tests/data/oem/: golden_roundtrip.oem  golden_roundtrip.xml  sample_oem.xml
tests/data/omm/: golden_omm.csv  golden_omm.json  golden_omm.omm  golden_omm.xml  golden_omm_catalog.csv
tests/data/opm/: golden_opm.opm  golden_opm.xml
tests/data/rinex/: sample_rinex3_mixed.rnx
tests/data/sp3/: golden_roundtrip.sp3  sample_sp3c.sp3  sample_sp3d.sp3
tests/data/spk/: golden.bsp
tests/data/stk/: golden_roundtrip.e
tests/data/tdm/: golden_tdm.tdm  golden_tdm.xml
tests/data/tle/: golden_alpha5.tle  golden_catalog.tle
validation/: index.html
