[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-formats"
version = "0.1.0"
description = "Lossless round-trip across orbital state-vector and ephemeris formats."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dimitrije Jankovic" }]
keywords = ["astrodynamics", "orbital-mechanics", "ephemeris", "ccsds", "tle", "spice", "space"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "sgp4>=2.20",
  "astropy>=6.0",
]

[project.optional-dependencies]
# SPK (NASA SPICE binary kernel) read/write. The kernel path is heavy and stays
# out of the base install.
spk = ["spiceypy>=6.0"]

[project.scripts]
orbit-formats = "orbit_formats.cli:main"

[project.urls]
Homepage = "https://github.com/astro-tools/orbit-formats"
Repository = "https://github.com/astro-tools/orbit-formats"
Issues = "https://github.com/astro-tools/orbit-formats/issues"
Documentation = "https://astro-tools.github.io/orbit-formats/"
Changelog = "https://github.com/astro-tools/orbit-formats/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs",
  "spiceypy>=6.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_formats"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/orbit_formats", "tests"]

# sgp4 ships no type stubs; the TLE reader confines its surface to a small set of
# typed wrappers and treats sgp4 returns as Any internally.
[[tool.mypy.overrides]]
module = ["sgp4", "sgp4.*"]
ignore_missing_imports = true

# spiceypy ships no type stubs; the SPK reader/writer (behind the [spk] extra) keeps
# its surface to a small set of typed wrappers.
[[tool.mypy.overrides]]
module = ["spiceypy", "spiceypy.*"]
ignore_missing_imports = true

# astropy ships partial stubs, but Time scale attribute access (.tai, .utc, .tt, .tdb)
# and unit arithmetic confuse mypy --strict; the conversion layer confines astropy to
# a small internal surface.
[[tool.mypy.overrides]]
module = ["astropy", "astropy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/orbit_formats"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]
