[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-formats"
version = "0.5.0"
description = "Lossless round-trip across orbital state-vector and ephemeris formats."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dimitrije Jankovic" }]
keywords = ["astrodynamics", "orbital-mechanics", "ephemeris", "ccsds", "tle", "spice", "space"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "sgp4>=2.20",
  "astropy>=6.0",
  # xsdata (MIT) is the CCSDS NDM/XML binding runtime: the generated bindings under
  # orbit_formats/_ccsds_xsd/ are plain dataclasses, and its XmlParser/XmlSerializer
  # parse/serialise them in the adapters.ccsds_xml seam. The base package pulls only
  # typing-extensions (no GPL, no lxml); the heavier [cli] codegen extra is dev-only and
  # invoked solely by scripts/regen_ccsds_xsd.py. Pinned to the codegen floor so the
  # runtime parser matches the committed bindings.
  "xsdata>=26.2",
]

[project.optional-dependencies]
# SPK (NASA SPICE binary kernel) read/write. The kernel path is heavy and stays
# out of the base install.
spk = ["spiceypy>=6.0"]

[project.scripts]
orbit-formats = "orbit_formats.cli:main"

[project.urls]
Homepage = "https://github.com/astro-tools/orbit-formats"
Repository = "https://github.com/astro-tools/orbit-formats"
Issues = "https://github.com/astro-tools/orbit-formats/issues"
Documentation = "https://astro-tools.github.io/orbit-formats/"
Changelog = "https://github.com/astro-tools/orbit-formats/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs",
  "spiceypy>=6.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_formats"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# The CCSDS NDM/XML bindings under _ccsds_xsd/ are machine-generated by xsdata (see
# scripts/regen_ccsds_xsd.py) and committed verbatim — thousands of lines whose layout and
# naming are the generator's, not ours. Linting or reformatting them would only fight the
# generator on every regeneration, so they are excluded from both `ruff check` and
# `ruff format`. The hand-written adapter seam (adapters/ccsds_xml.py) is fully linted.
extend-exclude = ["src/orbit_formats/_ccsds_xsd"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/orbit_formats", "tests"]
# The xsdata-generated CCSDS bindings under _ccsds_xsd/ are not checked: they are generated
# code (see the override below for the rationale and the import-side handling).
exclude = ['^src/orbit_formats/_ccsds_xsd/']

# sgp4 ships no type stubs; the TLE reader confines its surface to a small set of
# typed wrappers and treats sgp4 returns as Any internally.
[[tool.mypy.overrides]]
module = ["sgp4", "sgp4.*"]
ignore_missing_imports = true

# spiceypy ships no type stubs; the SPK reader/writer (behind the [spk] extra) keeps
# its surface to a small set of typed wrappers.
[[tool.mypy.overrides]]
module = ["spiceypy", "spiceypy.*"]
ignore_missing_imports = true

# astropy ships partial stubs, but Time scale attribute access (.tai, .utc, .tt, .tdb)
# and unit arithmetic confuse mypy --strict; the conversion layer confines astropy to
# a small internal surface.
[[tool.mypy.overrides]]
module = ["astropy", "astropy.*"]
ignore_missing_imports = true

# ccsds-ndm (GPL) is the dev-only cross-validation oracle: never a runtime or dev
# dependency, never distributed, installed transiently only in the dedicated CI oracle
# job. It ships no type stubs and is absent from the typecheck environment, so the oracle
# test imports it behind this override (and skips via importorskip wherever it is absent).
[[tool.mypy.overrides]]
module = ["ccsds_ndm", "ccsds_ndm.*"]
ignore_missing_imports = true

# xmlschema (MIT) is the dev-only OCM cross-validation oracle: ccsds-ndm predates the OCM and
# cannot parse it, so the OCM oracle test instead validates the writer's XML against the
# vendored official OCM XSD. Like ccsds-ndm it is installed transiently only in the CI oracle
# job and imported behind importorskip, so it ships no stubs and is absent from typecheck.
[[tool.mypy.overrides]]
module = ["xmlschema", "xmlschema.*"]
ignore_missing_imports = true

# Orekit (Apache-2.0) is the dev-only external cross-validation oracle for the conversion
# layer (elements / frames / time): a JVM-bridged Java library installed transiently only in
# the dedicated CI orekit job (orekit-jpype[jdk4py]) and imported behind importorskip, so the
# oracle test skips wherever it is absent. Neither the JPype bridge (orekit_jpype, jdk4py) nor
# the dynamically materialised Java packages (org.orekit.*, org.hipparchus.*, java.*) ship type
# stubs, so the oracle test imports them under this override.
[[tool.mypy.overrides]]
module = [
  "orekit_jpype",
  "orekit_jpype.*",
  "jdk4py",
  "jpype",
  "org.orekit.*",
  "org.hipparchus.*",
  "java.*",
]
ignore_missing_imports = true

# The CCSDS NDM/XML bindings under _ccsds_xsd/ are machine-generated by xsdata and excluded
# from --strict checking by policy: they are thousands of lines of generated dataclasses,
# regenerated wholesale from the vendored XSDs, so type-annotating them to our standard
# would be lost on the next regeneration. `follow_imports = skip` keeps the binding types
# usable (as Any) from the hand-written seam and tests without dragging the generated module
# into the strict pass; `ignore_errors` covers the rare case it is reached directly. The
# adapter seam that wraps these bindings (adapters/ccsds_xml.py) is fully strict-checked.
[[tool.mypy.overrides]]
module = ["orbit_formats._ccsds_xsd", "orbit_formats._ccsds_xsd.*"]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/orbit_formats"]
branch = true
# The xsdata-generated CCSDS bindings are not our code to cover: they are generated
# dataclasses regenerated from the vendored XSDs, exercised through the adapter seam rather
# than tested line-by-line. Keep them out of the coverage denominator.
omit = ["src/orbit_formats/_ccsds_xsd/*"]

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
  "^\\s*\\.\\.\\.$",
]
